--- a/views/microeconomics.pug
+++ b/views/microeconomics.pug
@@ -1,12 +1,41 @@
 extends layout
 
 block content
-    .card
-      .card-header
-        | Featured
-      .card-body
-        h5.card-title Special title treatment
-        p.card-text With supporting text below as a natural lead-in to additional content.
-        a.btn.btn-primary(href='#') Go somewhere
-      a.btn.btn-primary.btn-lg.main-btn(href='/') Back to Home
-      a.btn.btn-primary.btn-lg.main-btn(href='/catalog') Back to catalog
+    div.container
+      h3.title Microeconomics Courses
+      br
+      .card
+        .card-header
+          | Cornell
+          .card-body
+            h5.card-title Microeconomics for Management
+            a.btn.btn-primary(href='https://www.youtube.com/watch?v=JvbKP_8aNBk&list=PLs7Y2nGwfz4G4tU2XuFl_jg19UsTvrr9t') Go to the course
+      br
+      .card
+        .card-header
+          | MIT
+          .card-body
+            h5.card-title Principles of Microeconomics
+            a.btn.btn-primary(href='https://ocw.mit.edu/courses/economics/14-01sc-principles-of-microeconomics-fall-2011/') Go to the course
+      br
+      .card
+        .card-header
+          | Stanford
+          .card-body
+            h5.card-title Principles of Economics
+            a.btn.btn-primary(href='https://online.stanford.edu/courses/sohs-yeconschool-principles-economics') Go to the course
+      br
+      .card
+        .card-header
+          | UCI
+          .card-body
+            h5.card-title The Power of Microeconomics: Economic Principles in the Real World
+            a.btn.btn-primary(href='http://ocw.uci.edu/courses/the_power_of_microeconomics_economic_principles_in_the_real_world.html') Go to the course
+      br
+      .card
+        .card-header
+          | Seoul National University
+          .card-body
+            h5.card-title Introduction to Economics: Microeconomics
+            a.btn.btn-primary(href='https://www.edx.org/course/introduction-economics-microeconomics-snux-snu044-088-1x') Go to the course
+      br
