--- a/views/catalog.pug
+++ b/views/catalog.pug
@@ -14,7 +14,7 @@ block content
           | Linear Algebra
           .card-body
             h5.card-title Linear Algebra
-            p.card-text Linear algebra is central to almost all areas of mathematics. For instance, linear algebra is fundamental in modern presentations of geometry, including for defining basic objects such as lines, planes and rotations.
+            p.card-text The branch of mathematics that is concerned with mathematical structures closed under the operations of addition and scalar multiplication and that includes the theory of systems of linear equations, matrices, determinants, vector spaces, and linear transformations.
             a.btn.btn-primary(href='/linearAlgebra') Go to the course
       br
       .card
@@ -22,7 +22,7 @@ block content
           | Python
           .card-body
             h5.card-title Introduction to Python
-            p.card-text Python is a general-purpose interpreted, interactive, object-oriented, and high-level programming language. It was created by Guido van Rossum during 1985- 1990. Like Perl, Python source code is also available under the GNU General Public License (GPL). 
+            p.card-text  Python is an easy to learn, general-purpose, and powerful programming language. It has efficient high-level data structures and a simple but effective approach to object-oriented programming.
             a.btn.btn-primary(href='/python') Go to the course
       br
       .card
