--- a/public/stylesheets/home.css
+++ b/public/stylesheets/home.css
@@ -65,7 +65,17 @@ abbr[title] {
   border-bottom: none;
   text-decoration: underline;
   text-decoration: underline dotted; }
+img.main-img {
+    margin: auto;
+  	width: 50%;
+  	max-height: 30vh;
+  }
 
+  .btn.main-btn {
+    display: block;
+    margin: auto;
+    width: 40%;
+  }
 b,
 strong {
   font-weight: inherit; }
