fixed linear algebra page error

--- a/views/linearAlgebra.pug
+++ b/views/linearAlgebra.pug
@@ -23,7 +23,7 @@ block content
           | Davidson
           .card-body
             h5.card-title Applications of Linear Algebra
-            a.btn.btn-primary(href='/https://www.edx.org/course/applications-linear-algebra-part-1-davidsonx-d003x-1') Go to the course
+            a.btn.btn-primary(href='https://www.edx.org/course/applications-linear-algebra-part-1-davidsonx-d003x-1') Go to the course
       br
       .card
         .card-header
