--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -11,10 +11,7 @@
 h1.hero-title {
 	display: inline-block !important;
 }
-img.main-img {
-	width: 50%;
-	max-height: 30vh;
-}
+
 html body {
   /*font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;*/
 	font-family: qarmic-sans;
@@ -85,7 +82,18 @@ img.main-img {
     line-height: 1.3333333;
     border-radius: 6px;
 }
+.avatar {
+        margin: auto;
+        border: solid;
+        border-radius: 50%;
+				width: 100%;
+			}
 
+.welcome {
+  width: 100%;
+  display: block;
+  margin: auto;
+}
 .btn.main-btn {
   display: block;
   margin: auto;
