--- a/views/home.pug
+++ b/views/home.pug
@@ -7,7 +7,7 @@ block content
         .row
           .col 
           .col-lg-4.col-md-6.col-sm-10.col-xs-12
-            img.avatar(src='/assets/brand/avatar.jpeg' alt='user avatar')
+            img.avatar(src='/images/egg.png' alt='user avatar')
             br
             br
             h5.welcome Dear wildchickenuniversity Member： #{user.name}
