--- a/views/home.pug
+++ b/views/home.pug
@@ -11,7 +11,7 @@ block content
             br
             br
             h5.welcome Dear WCU Member： #{user.name}
-            button.btn.btn-lg.btn-danger.welcome(type='button') Your pints: #{user.miles} miles
+            button.btn.btn-lg.btn-danger.welcome(type='button') Your points: #{user.miles} miles
           .col
         
   br
