--- a/views/landing.pug
+++ b/views/landing.pug
@@ -31,7 +31,7 @@ body
       .container
         .hero-inner
           .hero-copy
-            h1.hero-title.mt-0 Wild Chicken Univeristy
+            h1.hero-title.mt-0 Wild Chicken University
             p.hero-paragraph
               | A place to learn.
             p.hero-cta
