--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -25,7 +25,7 @@ a {
 }
 
 .logotext {
-	font-size: 25px;
+	font-size: 20px;
 	font-weight: bold;
 }
 
@@ -98,4 +98,7 @@ img.main-img {
   display: block;
   margin: auto;
   width: 40%;
+}
+.navbar-brand {
+	font-size: 1.5rem !important;
 }
