--- a/views/layout.pug
+++ b/views/layout.pug
@@ -3,7 +3,7 @@ html
   head
     include includes/head.pug
   body
-    include includes/header
+    include includes/header.pug
     include includes/alert.pug
     br
     block content
